<resources>
    <string name="app_name">Aparat</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="best_videos">Best Videos</string>
    <string name="new_video">New Video</string>
    <string name="special_video">Special Video</string>
    <string name="time">Time:</string>
    <string name="description">Description :</string>
    <string name="home">Home</string>
    <string name="category">category</string>
    <string name="favorite">Favorite</string>
    <string name="login">login</string>
    <string name="there_is_no_favorite_video">There is no favorite video</string>
    <string name="signIn">signIn</string>
    <string name="signUp">signUp</string>
    <string name="please_enter_your_mobile_number">Please enter your mobile number</string>
    <string name="please_enter_your_password">Please enter your password</string>
</resources>