<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:attrs="http://schemas.android.com/tools"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#2D334B"
    tools:context=".fragment.HomeFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.core.widget.ContentLoadingProgressBar
                android:id="@+id/progress"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone">

            </androidx.core.widget.ContentLoadingProgressBar>


            <RelativeLayout
                android:id="@+id/recycler_news"
                android:layout_width="match_parent"
                android:layout_height="250dp">

                <androidx.viewpager.widget.ViewPager
                    android:id="@+id/pager_news"
                    android:layout_width="402dp"
                    android:layout_height="210dp"
                    android:layout_marginStart="@dimen/margin_10"
                    android:layout_marginTop="@dimen/margin_10"
                    android:layout_marginEnd="@dimen/margin_10"
                    android:layout_marginBottom="@dimen/margin_10">

                </androidx.viewpager.widget.ViewPager>

                <com.rd.PageIndicatorView
                    android:id="@+id/pageIndicatorView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="@dimen/margin_10"
                    app:piv_animationType="worm"
                    app:piv_dynamicCount="true"
                    app:piv_interactiveAnimation="true"
                    app:piv_selectedColor="@color/text_color"
                    app:piv_unselectedColor="@color/gray_300"
                    app:piv_viewPager="@id/pager_news"
                    attrs:piv_padding="12dp"
                    attrs:piv_radius="8dp" />

            </RelativeLayout>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_best"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/recycler_news"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView

                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="@dimen/margin_10"
                    android:gravity="center"
                    android:text="@string/best_videos"
                    android:textColor="@color/white">

                </androidx.appcompat.widget.AppCompatTextView>


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_best"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10">

                </androidx.recyclerview.widget.RecyclerView>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_newVideo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_best"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView

                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="@dimen/margin_10"
                    android:gravity="center"
                    android:text="@string/new_video"
                    android:textColor="@color/white">

                </androidx.appcompat.widget.AppCompatTextView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_newVideo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10">

                </androidx.recyclerview.widget.RecyclerView>
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/linear_special"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_newVideo"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView

                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:layout_marginStart="@dimen/margin_10"
                    android:gravity="center"
                    android:text="@string/special_video"
                    android:textColor="@color/white">

                </androidx.appcompat.widget.AppCompatTextView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recycler_special"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_10">

                </androidx.recyclerview.widget.RecyclerView>
            </androidx.appcompat.widget.LinearLayoutCompat>


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>


</RelativeLayout>